--- a/Q32GAssets/Q3_2GCesiumCatriz.html
+++ b/Q32GAssets/Q3_2GCesiumCatriz.html
@@ -19,7 +19,7 @@
         width: 80%;
         margin-left: 10%;
         text-align: center;
-        background-image: url('/Q32GAssets/stars.png')
+        background-image: url('stars.png')
         }
         
         .title {
