--- a/Q32GAssets/Q3_2GCesiumCatriz.html
+++ b/Q32GAssets/Q3_2GCesiumCatriz.html
@@ -71,7 +71,7 @@
             <h3>by CATRIZ, Evan Anthony A. </h3>
         </div>
         <nav class="navbar">
-            <a href="../../index.html"> Home </a>
+            <a href="../../index.html"> Home! </a>
             <a href="registered.html"> Show Saved Accounts </a>
         </nav>
     </header>
